I fix wrap problems

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             <div class="write__words">
                 <div class="write__section">
                     <div class="txt__section">
-                        <textarea name="textEnglish"
-                        id="text__english" cols="70" rows="29" ></textarea>
+                        <textarea id="text__english" cols="70" rows="29"  wrap="hard"></textarea>
                         <div class="line__text"></div>
                     </div>
                     
